changes get and post functionality to match swagger
