# models/changes.js
@@ -4,6 +4,7 @@ const { Schema } = mongoose;
 const changeModel = new Schema({
     guid: { type: String, required: true },
     condition: { type: String, required: true},
+    measurements: [Object]
     
 }, { strict: false });
 
